# BA-nats-demo

./: Cargo.toml  README.md  docker-compose.yml
common/: Cargo.toml
common/src/: lib.rs
common/src/models/: job.rs  mod.rs
common/src/nats/: dlq_subscribe.rs  kv_store.rs  mod.rs  object_store.rs  publish.rs  subscribe.rs
common/src/util/: routes.rs  serialize.rs  stream.rs
dev-env/: docker-compose.yml
dlq-worker/: Cargo.toml  Dockerfile
dlq-worker/src/: lib.rs  main.rs  worker.rs
dlq-worker/src/util/: state.rs
nats-leaf/: docker-compose.yml  init.sh  leaf.conf  main.conf
nats-server/: docker-compose.yml
service/: Cargo.toml  Dockerfile  api.http
service/src/: main.rs
service/src/models/: root.rs
service/src/routes/: root.rs
service/src/util/: state.rs
worker/: Cargo.toml  Dockerfile
worker/src/: lib.rs  main.rs  worker.rs
worker/src/models/: root.rs
worker/src/util/: mod.rs  state.rs
