[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"]}
serde = { version = "1.0.171", features = ["derive"] }
serde_repr = "0.1.14"
serde_json = "1.0.103"
async-trait = "0.1.71"
tokio = { version = "1.29.1", features = ["fs"]}
tracing = "0.1.37"
futures = {version = "0.3.28"}
rand = "0.8.5"
base64 = "0.21.2"
tokio-util = "0.7.8"
tokio-stream = "0.1.14"
async-nats = "0.30.0"
reqwest = {version = "0.11.18", default-features = false, features = ["gzip", "deflate", "stream", "json", "rustls-tls"]}
bytes = "1.4.0"
