[package]
name = "dlq-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
async-trait = "0.1.68"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.164", features = ["derive"] }
serde_repr = "0.1.12"
serde_json = "1.0.96"
reqwest = {version = "0.11.18", default-features = false, features = ["gzip", "deflate", "stream", "json", "rustls-tls"]}
futures = { version = "0.3.28" }
tokio-util = "0.7.8"
tokio-stream = "0.1.14"
bytes = "1.4.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
async-nats = "0.29.0"
uuid = { version = "1.3.4", features = ["v4"] }
