[package]
name = "dlq-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
async-trait = "0.1.72"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.175", features = ["derive"] }
serde_repr = "0.1.15"
serde_json = "1.0.103"
reqwest = {version = "0.11.18", default-features = false, features = ["gzip", "deflate", "stream", "json", "rustls-tls"]}
futures = { version = "0.3.28" }
tokio-util = "0.7.8"
tokio-stream = "0.1.14"
bytes = "1.4.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
uuid = { version = "1.4.1", features = ["v4"] }
