[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
async-trait = "0.1.66"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.156", features = ["derive"] }
serde_repr = "0.1.11"
serde_json = "1.0.94"
reqwest = { version = "0.11.14", features = ["gzip", "deflate", "stream", "json"] }
futures = { version = "0.3.27" }
tokio-util = "0.7.7"
tokio-stream = "0.1.12"
bytes = "1.4.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
async-nats = "0.28.0"
uuid = { version = "1.3.0", features = ["v4"] }
